# Email_sender

./: .env.example  README.md  pyproject.toml  send_emails.py
configs/: settings.py
fixtures/: email_fixtures.py
generators/: email_generator.py
utils/: email_sender.py
